# starlang

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  logs.txt
.beads/: beads.jsonl
crates/ambitious/: Cargo.toml
crates/ambitious/src/: lib.rs
crates/ambitious/src/distribution/: manager.rs  mod.rs  pg.rs  tests.rs
crates/ambitious/src/process/: runtime.rs
crates/ambitious/src/store/: mod.rs  registry.rs
crates/dream/: Cargo.toml
crates/dream-application/: Cargo.toml
crates/dream-application/src/: application.rs  error.rs  lib.rs  types.rs
crates/dream-atom/: Cargo.toml
crates/dream-atom/src/: lib.rs
crates/dream-core/: Cargo.toml
crates/dream-core/src/: exit_reason.rs  lib.rs  message.rs  node.rs  pid.rs  reference.rs  system_message.rs
crates/dream-gen-server/: Cargo.toml
crates/dream-gen-server/src/: lib.rs  server.rs
crates/dream-macros/: Cargo.toml
crates/dream-macros/src/: lib.rs
crates/dream-macros/tests/: derive_test.rs
crates/dream-process/src/: global.rs  lib.rs  runtime.rs  spawn.rs
crates/dream-runtime/: Cargo.toml
crates/dream-runtime/src/: context.rs  error.rs  lib.rs  mailbox.rs  process_handle.rs  registry.rs  task_local.rs
crates/dream-supervisor/src/: lib.rs  supervisor.rs
crates/dream/src/: lib.rs  node.rs  registry.rs
crates/dream/src/distribution/: discovery.rs  global.rs  manager.rs  mod.rs  monitor.rs  node.rs  pg.rs  protocol.rs  transport.rs
crates/starlang/: Cargo.toml
crates/starlang-application/: Cargo.toml
crates/starlang-application/src/: application.rs
crates/starlang-atom/: Cargo.toml
crates/starlang-atom/src/: lib.rs
crates/starlang-core/: Cargo.toml
crates/starlang-core/src/: lib.rs  message.rs  node.rs  pid.rs  system_message.rs
crates/starlang-gen-server/: Cargo.toml
crates/starlang-gen-server/src/: lib.rs  protocol.rs  server.rs  types.rs
crates/starlang-macros/: Cargo.toml
crates/starlang-process/: Cargo.toml
crates/starlang-process/src/: global.rs  lib.rs  runtime.rs  spawn.rs
crates/starlang-runtime/: Cargo.toml
crates/starlang-runtime/src/: context.rs  lib.rs  process_handle.rs  registry.rs
crates/starlang-supervisor/: Cargo.toml
crates/starlang-supervisor/src/: dynamic_supervisor.rs  lib.rs  supervisor.rs  types.rs
crates/starlang/src/: channel.rs  lib.rs  node.rs  presence.rs  registry.rs
crates/starlang/src/application/: application.rs  core.rs  mod.rs  types.rs
crates/starlang/src/atom/: mod.rs
crates/starlang/src/channel/: core.rs  websocket.rs
crates/starlang/src/core/: exit_reason.rs  message.rs  mod.rs  node.rs  pid.rs  reference.rs  system_message.rs
crates/starlang/src/distribution/: global.rs  manager.rs  mod.rs  monitor.rs  node.rs  pg.rs  protocol.rs  transport.rs
crates/starlang/src/gen_fsm/: error.rs  mod.rs  protocol.rs  server.rs  types.rs
crates/starlang/src/gen_server/: error.rs  mod.rs  protocol.rs  server.rs  types.rs
crates/starlang/src/peer/: core.rs  mod.rs  options.rs
crates/starlang/src/presence/: server.rs
crates/starlang/src/process/: global.rs  mod.rs  runtime.rs  spawn.rs
crates/starlang/src/runtime/: context.rs  error.rs  mod.rs  process_handle.rs  registry.rs  task_local.rs
crates/starlang/src/supervisor/: dynamic_supervisor.rs  error.rs  mod.rs  supervisor.rs  types.rs
crates/starlang/src/timer/: mod.rs
examples/chat/: Cargo.toml  README.md  config.toml
examples/chat/src/: channel.rs  lobby.rs  main.rs  pubsub.rs  registry.rs  room.rs  room_supervisor.rs  server.rs  session.rs
examples/chat/tests/: distribution_test.rs
