[package]
name = "dream-application"
version = "0.1.0"
edition = "2021"
description = "Application lifecycle management for DREAM"
license = "MIT OR Apache-2.0"

[dependencies]
dream-core = { path = "../dream-core" }
dream-runtime = { path = "../dream-runtime" }
dream-process = { path = "../dream-process" }
dream-supervisor = { path = "../dream-supervisor" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
