[package]
name = "dream-atom"
version = "0.1.0"
edition = "2021"
description = "Atom (interned string) implementation for DREAM"
license = "MIT OR Apache-2.0"

[dependencies]
dashmap = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }
