[package]
name = "dream"
version = "0.1.0"
edition = "2021"
description = "DREAM - Distributed Rust Erlang Abstract Machine"
license = "MIT OR Apache-2.0"

[dependencies]
dream-core = { path = "../dream-core" }
dream-runtime = { path = "../dream-runtime" }
dream-process = { path = "../dream-process" }
dream-gen-server = { path = "../dream-gen-server" }
dream-supervisor = { path = "../dream-supervisor" }
dream-application = { path = "../dream-application" }
dream-macros = { path = "../dream-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
