[package]
name = "starlang-atom"
version.workspace = true
edition = "2021"
description = "Atom (interned string) implementation for Starlang"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
dashmap = "6"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }
