[package]
name = "starlang-gen-server"
version.workspace = true
edition = "2021"
description = "GenServer pattern for Starlang"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
starlang-core = { version = "0.1.0", path = "../starlang-core" }
starlang-runtime = { version = "0.1.0", path = "../starlang-runtime" }
starlang-process = { version = "0.1.0", path = "../starlang-process" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
