[package]
name = "starlang-macros"
version.workspace = true
edition = "2024"
description = "Ergonomic macros for Starlang"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
starlang = { version = "0.1.0", path = "../starlang" }
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
