[package]
name = "starlang-supervisor"
version.workspace = true
edition = "2021"
description = "Supervisor pattern for Starlang"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
starlang-core = { version = "0.1.0", path = "../starlang-core" }
starlang-runtime = { version = "0.1.0", path = "../starlang-runtime" }
starlang-process = { version = "0.1.0", path = "../starlang-process" }
starlang-gen-server = { version = "0.1.0", path = "../starlang-gen-server" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
