[package]
name = "starlang"
version.workspace = true
edition = "2021"
description = "Starlang - Erlang-style concurrency for Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
starlang-core = { version = "0.1.0", path = "../starlang-core" }
starlang-runtime = { version = "0.1.0", path = "../starlang-runtime" }
starlang-process = { version = "0.1.0", path = "../starlang-process" }
starlang-gen-server = { version = "0.1.0", path = "../starlang-gen-server" }
starlang-supervisor = { version = "0.1.0", path = "../starlang-supervisor" }
starlang-application = { version = "0.1.0", path = "../starlang-application" }
starlang-macros = { version = "0.1.0", path = "../starlang-macros" }

# Distribution
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio = { version = "1", features = ["sync", "time", "net", "io-util"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6"
async-trait = "0.1"
hostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
