[package]
name = "starlang"
version.workspace = true
edition = "2024"
description = "Starlang - Erlang-style concurrency for Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
# Proc macros (must be separate crate)
starlang-macros = { version = "0.1.0", path = "../starlang-macros" }

# Core dependencies (from merged crates)
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "net", "io-util", "rt", "macros"] }
dashmap = "6"
parking_lot = "0.12"
async-trait = "0.1"
once_cell = "1"
tracing = "0.1"

# Distribution
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.14"
hostname = "0.4"

# WebSocket transport for Phoenix Channels (optional)
tokio-tungstenite = { version = "0.28", optional = true }
serde_json = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
websocket = ["tokio-tungstenite", "serde_json", "futures"]
peer = ["tokio/process"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
