[package]
name = "starlang-chat"
version.workspace = true
edition = "2024"
description = "Multi-user chat application example using Starlang"
license.workspace = true
publish = false

[[bin]]
name = "chat-server"
path = "src/main.rs"

[[bin]]
name = "chat-client"
path = "src/bin/chat-client.rs"

[dependencies]
starlang = { version = "0.1.0", path = "../../crates/starlang", features = ["websocket"] }

async-trait = "0.1"
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# TUI dependencies for chat-client
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
futures = "0.3"
unicode-width = "0.2"
toml = "0.8"
dirs = "5"
chrono = "0.4"
